# clawbot-plus

./: .gitignore  AGENTS.md  README.md  SKILLS_DIRECTORY.md  cl.md  clawbot.json  generate_skills_md.py  pyproject.toml  test_gaps.py  update_29_march_2026.md
clawbot/: __init__.py  cli.py
clawbot/computer/: __init__.py  actions.py  agent.py  daemon.py  gateway.py  memory_search.py  orchestrator.py  overlay.py  ppt_generator.py  rag.py  security.py  self_healing.py  system_control.py  telegram_bot.py  voice.py  watcher.py  window_manager.py  workflows.py
identity/: device-auth.json  device.json
skills/1password/: SKILL.md
skills/apple-notes/: SKILL.md
skills/apple-reminders/: SKILL.md
skills/bear-notes/: SKILL.md
skills/blogwatcher/: SKILL.md
skills/blucli/: SKILL.md
skills/bluebubbles/: SKILL.md
skills/camsnap/: SKILL.md
skills/canvas/: SKILL.md
skills/capcut/: SKILL.md
skills/cctv_expert/: SKILL.md  __init__.py  monitor.py
skills/claude_coder/: SKILL.md
skills/clawhub/: SKILL.md
skills/coding-agent/: SKILL.md
skills/discord/: SKILL.md
skills/eightctl/: SKILL.md
skills/gemini/: SKILL.md
skills/gh-issues/: SKILL.md
skills/gifgrep/: SKILL.md
skills/github/: SKILL.md
skills/gog/: SKILL.md
skills/goplaces/: SKILL.md
skills/healthcheck/: SKILL.md
skills/himalaya/: SKILL.md
skills/imsg/: SKILL.md
skills/latex_expert/: SKILL.md
skills/mcporter/: SKILL.md
skills/nano-pdf/: SKILL.md
workspace/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SKILLS_MAP.md  SOUL.md  TOOLS.md  USER.md  telegram_history.json
(+42 files in other folders)
